--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "react-hook-form": "^7.56.4",
+    "tailwindcss": "^4.0.6",
+    "zod": "^3.25.7"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
